fixed alignment on workout name of resting workout

--- a/src/app/components/exercise-thumbnail/exercise-thumbnail.component.scss
+++ b/src/app/components/exercise-thumbnail/exercise-thumbnail.component.scss
@@ -59,6 +59,7 @@ ion-label {
     padding: 4px;
     font-size: 17px;
     color: var(--ion-color-dark) !important;
+    max-width: unset!important;
 }
 
 h2 {
